# RetensiOS

./: .gitignore  LICENSE  README.md  pyproject.toml
rfm_engine/: __init__.py  config.py
rfm_engine/ai/: __init__.py  generator.py  prompts.py
rfm_engine/ai/providers/: __init__.py  anthropic_provider.py  openai_provider.py
rfm_engine/cli/: __init__.py  init.py  main.py
rfm_engine/core/: __init__.py  churn.py  data_loader.py  profiler.py  rfm.py  scoring.py  segmentation.py
rfm_engine/reporting/: __init__.py  csv_output.py  report_builder.py  revenue_analysis.py
tests/: conftest.py  test_ai_generator.py  test_ai_prompts.py  test_churn.py  test_cli.py  test_config.py  test_csv_output.py  test_data_loader.py  test_determinism.py  test_init_wizard.py  test_integration.py  test_iteration2_integration.py  test_profiler.py  test_providers.py  test_report_builder.py  test_revenue_analysis.py  test_rfm.py  test_scoring.py  test_segmentation.py
tests/golden/: expected_customers_rfm.csv  expected_segments_summary.csv  golden_data.csv
