[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retensios"
version = "0.1.0"
description = "Open-source retention decision framework CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "click>=8.1",
  "openai>=1.0",
  "anthropic>=0.18",
  "InquirerPy>=0.3",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://github.com/alexe-ev/RetensiOS"
Repository = "https://github.com/alexe-ev/RetensiOS"
Issues = "https://github.com/alexe-ev/RetensiOS/issues"

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-cov>=7.0", "ruff>=0.13"]

[project.scripts]
retensios = "rfm_engine.cli.main:cli"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["rfm_engine*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["rfm_engine/core", "rfm_engine/reporting"]
branch = true

[tool.coverage.report]
fail_under = 80
